--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@reach/dialog": "^0.12.0",
     "classnames": "^2.2.6",
+    "cli": "^1.0.1",
     "clickable-box": "^1.1.0",
     "dotenv": "^8.2.0",
     "feather-icons": "^4.28.0",
-    "gatsby": "^2.27.4",
+    "gatsby": "^2.28.1",
     "gatsby-cli": "^2.14.1",
     "gatsby-image": "^2.6.0",
     "gatsby-plugin-favicon": "^3.1.6",
