--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reach/dialog": "^0.12.0",
     "autolinker": "^3.14.2",
+    "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
     "cli": "^1.0.1",
     "clickable-box": "^1.1.0",
@@ -24,6 +25,7 @@
     "gatsby-plugin-feed": "^2.8.0",
     "gatsby-plugin-google-analytics": "^2.6.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-layout": "^1.7.0",
     "gatsby-plugin-react-helmet": "^3.5.0",
     "gatsby-plugin-sass": "^2.6.0",
     "gatsby-plugin-sharp": "^2.9.1",
@@ -34,6 +36,7 @@
     "marked": "^1.2.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "reset-css": "^5.0.1",
