--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "test": "eslint . --ext .js --ext .jsx",
-    "format": "prettier \"**/*.{js,jsx,ts,tsx,css,sass,scss,json,md,mdx,html}\" --write"
+    "format": "prettier \"**/*.{js,jsx,ts,tsx,css,sass,scss,json,md,mdx,html}\" --write",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
     "@reach/dialog": "^0.12.0",
