cleaned up all the code + hid the tokens

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "women-who-design",
+  "name": "dbu-design-corps",
   "description": "A Twitter directory of accomplished women in the design industry.",
   "license": "MIT",
   "scripts": {
